# server-game

./: .gitignore  CMakeLists.txt  GameServer.cpp  GameServer.h  Main.cpp  README.md  Room.cpp  Room.h  TODOList.md
config/: logger.conf
docs/: LOGGER_IMPLEMENTATION.md  LOGGER_MACRO_MIGRATION.md  PROJECT_STRUCTURE.md  TESTING.md
examples/: basic_usage.cpp  logger_example.cpp
include/core/: GameServer.h
include/utils/: Logger.h
src/: Main.cpp
src/core/: GameServer.cpp
src/game/: Room.cpp
src/utils/: Logger.cpp
tests/: CMakeLists.txt  LoggerTest.cpp  run_tests.bat  run_tests.sh
